<resources>
  <string name="app_name">StudyMateAndroid</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="email">Email</string>
  <string name="passowrd">Password</string>
  <string name="login">LOGIN</string>
  <string name="show_pwd">Show Password</string>
  <string name="hide_pwd">Hide Password</string>
  <string name="forgot">Forgot password?</string>
  <string name="closebutton">Close Button for Activity</string>
  <string name="newUser">Not a Member yet? Sign Up here.</string>
  <string name="fullName">Full Name</string>
  <string name="mobileNumber">Mobile Number</string>
  <string name="birthdate">Birthdate</string>
  <string name="confirmPassword">Confirm Password</string>
  <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
  <string name="signUp">SIGN UP</string>
  <string name="already_user">Already have Account? Login here.</string>
  <string name="registered_emailid">Please enter your Registered Email Id below:</string>
  <string name="submit">SUBMIT</string>
  <string name="back">BACK</string>
  <string name="CompleteProfile">Please complete your profile</string>
  <string name="Department">Department</string>
  <string name="Major">Major</string>
  <string name="finish">Finish</string>
  <string name="SelectDepartment">Please select a deprtment</string>
  <string name="SelectMajor">Please select a major</string>
  <string name="answer">Answers</string>
  <string name="asked">Asked</string>
  <string name="emailSent">A temorary password was sent to your email</string>
  <!-- ERROR MESSAGES-->
  <string name="NoSuchUser">Such user does not exist</string>
  <string name="NetworkConnectionFailure">Something went wrong please try again later</string>
  <string name="InvalidEmail">Your Email Id is Invalid</string>
  <string name="Enterbothcredentials">Enter both credentials</string>
  <string name="AllFieldsRequired">All fields are required</string>
  <string name="PasswordsDontMatch">Both passwords do not match</string>
  <string name="SelectTermsAndConditions">Please select Terms and Conditions</string>
  <string name="UserAlreadyExists">A user with such email already exist</string>
  <string name="ChooseFromGallary">Choose From Gallary</string>
  <string name="TakeAPic">Take A Picture</string>
  <string name="SelectImage">Select Image</string>
  <string name="allcredintialRequired">All Credentials Are Required</string>
  <string name="CompleteActionUsing">Complete Action Using</string>
  <string name="Cancel">Cancel</string>
  <string name="cameraPermissionFailed">Camera Permission Required</string>
  <!-- SUCCESS MESSAGES -->
  <string name="HoldOn">Please hold on</string>
  <string name="nav_home">Home</string>
  <string name="nav_profile">Profile</string>
  <string name="nav_search">Search</string>
  <string name="nav_ask">Ask</string>
  <string name="ans_added">Your answer was successfully posted</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="PleaseWait">Please wait a second while we update your profile</string>
  <string name="SomethingWentWrong">Something went wrong please try again later</string>
  <string name="post">POST</string>
  <string name="type_your_question_here">Type Your Question Here</string>
  <string name="question_lenght_error">Question text must be at least 10 characters</string>
  <string name="type_down_an_answer">Type Down An Answer</string>
  <string name="Write_down_an_ans_err">write down an answer</string>
  <string name="search">Search</string>
  <string name="studymate_user">StudyMate User</string>
  <string name="answers">Answers</string>
  <string name="questions">Questions</string>
  <string name="edit">EDIT</string>
  <string name="phone_number">Phone Number</string>
  <string name="user_name">USER NAME</string>
  <string name="save">Save</string>
  <string name="delete">DELETE</string>
  <string name="questionEditted">Question was successfully edited</string>
  <string name="questionDeleted">Question Successfully Deleted</string>
</resources>
