<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studymate.mstechnologies.com.studymateandroid.Activities.EditProfileActivity"
    android:background="@drawable/bg_gradiant"
    android:layoutDirection="ltr"
    >
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/ep_user_pic"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:src="@drawable/ic_default_avatar"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="45dp"
          />


        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            >
<EditText
    android:id="@+id/ep_user_name_ET"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:textColor="@color/white"
    android:hint="@string/user_name"
    android:gravity="center"
    android:background="@drawable/rounded_edittext"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_weight="1"
    android:inputType="textPersonName"
    />

      <EditText
          android:id="@+id/ep_phone_number_ET"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="8dp"
          android:textColor="@color/white"
          android:hint="@string/phone_number"
          android:gravity="center"
          android:background="@drawable/rounded_edittext"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_weight="1"
          android:layout_marginBottom="20dp"
          android:inputType="phone"
          />


        </LinearLayout>


    </LinearLayout>


  </ScrollView>
  <LinearLayout
      android:id="@+id/depLinearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:layout_below="@+id/scrollView"
      android:weightSum="2"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Department"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_weight="0.5"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ep_departmentSpinner"
        android:layout_marginStart="0dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:saveEnabled="true"
        />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/majorLinearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:layout_marginTop="18dp"
      android:layout_below="@id/depLinearLayout"
      android:weightSum="2"

      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Major"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_weight="0.5"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ep_majorSpinner"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:layout_below="@id/majorLinearLayout"
      android:weightSum="2"
      android:layout_marginTop="18dp"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_weight="0.5"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ep_birthDateBtn"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        android:src="@drawable/birthdate"
        android:background="@color/transparent"
        />
  </LinearLayout>

  <Button
      android:id="@+id/ep_save_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="@color/transparent"
      android:text="@string/save"
      />

</RelativeLayout>
